syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.taller5.payments.grpc";
option java_outer_classname = "CheckoutProto";

// CLIENT-VISIBLE PACKAGE (para node/grpcurl/etc)
package taller5.payments;

message CheckoutRequest {
  int64 customerId = 1;
  int64 productId  = 2;
  int32 quantity   = 3;
  double amount    = 4;
}

message CheckoutResponse {
  int64 paymentId = 1;
  int64 invoiceId = 2;
  string status   = 3;
}

service CheckoutService {
  rpc Checkout(CheckoutRequest) returns (CheckoutResponse);
}
